--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,10 +109,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 
 [EditorStartup]
-LastLevel=/Game/Maps/SqaureMap
+LastLevel=/Game/Maps/Level1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Minimap/MinimapCam_Blueprint.MinimapCam_Blueprint
 
 [RootWindow]
 ScreenPosition=X=1076.000 Y=150.000
@@ -2595,11 +2596,162 @@ SoundWave.Debug=True
 SoundWave.Concurrency=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
+SceneCaptureComponent2D.Variable=True
+SceneCaptureComponent2D.TransformCommon=True
+SceneCaptureComponent2D.Sockets=True
+SceneCaptureComponent2D.Lens=True
+SceneCaptureComponent2D.Color Grading=True
+SceneCaptureComponent2D.Film=True
+SceneCaptureComponent2D.Mobile Tonemapper=True
+SceneCaptureComponent2D.Rendering Features=True
+SceneCaptureComponent2D.Projection=True
+SceneCaptureComponent2D.PostProcessVolume=True
+SceneCaptureComponent2D.SceneCapture=True
+SceneCaptureComponent2D.Rendering=True
+SceneCaptureComponent2D.Tags=True
+SceneCaptureComponent2D.ComponentReplication=True
+SceneCaptureComponent2D.Activation=True
+SceneCaptureComponent2D.Cooking=True
+SceneCaptureComponent2D.Events=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Events=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.Physics=True
+WidgetComponent.Animation=True
+WidgetComponent.Collision=True
+WidgetComponent.Layers=True
+WidgetComponent.Rendering=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Variable=True
+WidgetComponent.Cooking=True
+CanvasRenderTarget2D.TextureRenderTarget2D=True
+CanvasRenderTarget2D.TextureRenderTarget=True
+CanvasRenderTarget2D.File Path=True
+CanvasRenderTarget2D.LevelOfDetail=True
+TextureRenderTarget2D.TextureRenderTarget2D=True
+TextureRenderTarget2D.TextureRenderTarget=True
+TextureRenderTarget2D.File Path=True
+TextureRenderTarget2D.LevelOfDetail=True
+PaperSpriteComponent.Variable=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Sockets=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.ComponentReplication=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperSpriteComponent.Events=True
+SceneCapture2D.TransformCommon=True
+SceneCapture2D.Lens=True
+SceneCapture2D.Color Grading=True
+SceneCapture2D.Film=True
+SceneCapture2D.Mobile Tonemapper=True
+SceneCapture2D.Rendering Features=True
+SceneCapture2D.Projection=True
+SceneCapture2D.SceneCapture=True
+SceneCapture2D.PostProcessVolume=True
+SceneCapture2D.Rendering=True
+SceneCapture2D.Tags=True
+SceneCapture2D.Activation=True
+SceneCapture2D.Cooking=True
+SceneCapture2D.Replication=True
+SceneCapture2D.Input=True
+Room_C.TransformCommon=True
+PaperSpriteActor.TransformCommon=True
+PaperSpriteActor.Sprite=True
+PaperSpriteActor.Materials=True
+PaperSpriteActor.Physics=True
+PaperSpriteActor.Collision=True
+PaperSpriteActor.Lighting=True
+PaperSpriteActor.Rendering=True
+PaperSpriteActor.Tags=True
+PaperSpriteActor.Activation=True
+PaperSpriteActor.Cooking=True
+PaperSpriteActor.Replication=True
+PaperSpriteActor.Input=True
+PaperSpriteActor.Actor=True
+PaperGroupedSpriteActor.TransformCommon=True
+PaperGroupedSpriteActor.Sprite=True
+PaperGroupedSpriteActor.Materials=True
+PaperGroupedSpriteActor.Instances=True
+PaperGroupedSpriteActor.Physics=True
+PaperGroupedSpriteActor.Collision=True
+PaperGroupedSpriteActor.Lighting=True
+PaperGroupedSpriteActor.Rendering=True
+PaperGroupedSpriteActor.Tags=True
+PaperGroupedSpriteActor.Activation=True
+PaperGroupedSpriteActor.Cooking=True
+PaperGroupedSpriteActor.Replication=True
+PaperGroupedSpriteActor.Input=True
+PaperGroupedSpriteActor.Actor=True
+MinimapCam_Blueprint_C.TransformCommon=True
+MinimapCam_Blueprint_C.Lens=True
+MinimapCam_Blueprint_C.Color Grading=True
+MinimapCam_Blueprint_C.Film=True
+MinimapCam_Blueprint_C.Mobile Tonemapper=True
+MinimapCam_Blueprint_C.Rendering Features=True
+MinimapCam_Blueprint_C.Projection=True
+MinimapCam_Blueprint_C.SceneCapture=True
+MinimapCam_Blueprint_C.PostProcessVolume=True
+MinimapCam_Blueprint_C.Rendering=True
+MinimapCam_Blueprint_C.Tags=True
+MinimapCam_Blueprint_C.Activation=True
+MinimapCam_Blueprint_C.Cooking=True
+MinimapCam_Blueprint_C.Replication=True
+MinimapCam_Blueprint_C.Input=True
+MinimapCam_Blueprint_C.Tick=True
+REINST_MinimapCam_Blueprint_C_922.TransformCommon=True
+REINST_MinimapCam_Blueprint_C_922.Lens=True
+REINST_MinimapCam_Blueprint_C_922.Color Grading=True
+REINST_MinimapCam_Blueprint_C_922.Film=True
+REINST_MinimapCam_Blueprint_C_922.Mobile Tonemapper=True
+REINST_MinimapCam_Blueprint_C_922.Rendering Features=True
+REINST_MinimapCam_Blueprint_C_922.Rendering=True
+REINST_MinimapCam_Blueprint_C_922.Replication=True
+REINST_MinimapCam_Blueprint_C_922.SceneCapture=True
+REINST_MinimapCam_Blueprint_C_922.Input=True
+REINST_MinimapCam_Blueprint_C_922.Projection=True
+REINST_MinimapCam_Blueprint_C_922.PostProcessVolume=True
+REINST_MinimapCam_Blueprint_C_922.Tags=True
+REINST_MinimapCam_Blueprint_C_922.Activation=True
+REINST_MinimapCam_Blueprint_C_922.Cooking=True
+REINST_MinimapCam_Blueprint_C_922.Actor=True
+REINST_MinimapCam_Blueprint_C_926.TransformCommon=True
+REINST_MinimapCam_Blueprint_C_926.Lens=True
+REINST_MinimapCam_Blueprint_C_926.Color Grading=True
+REINST_MinimapCam_Blueprint_C_926.Film=True
+REINST_MinimapCam_Blueprint_C_926.Mobile Tonemapper=True
+REINST_MinimapCam_Blueprint_C_926.Rendering Features=True
+REINST_MinimapCam_Blueprint_C_926.Rendering=True
+REINST_MinimapCam_Blueprint_C_926.Replication=True
+REINST_MinimapCam_Blueprint_C_926.SceneCapture=True
+REINST_MinimapCam_Blueprint_C_926.Input=True
+REINST_MinimapCam_Blueprint_C_926.Projection=True
+REINST_MinimapCam_Blueprint_C_926.PostProcessVolume=True
+REINST_MinimapCam_Blueprint_C_926.Tags=True
+REINST_MinimapCam_Blueprint_C_926.Activation=True
+REINST_MinimapCam_Blueprint_C_926.Cooking=True
+REINST_MinimapCam_Blueprint_C_926.Actor=True
 
 [MRU]
-MRUItem0=/Game/Maps/MainMenu
-MRUItem1=/Game/Maps/Lev
-MRUItem2=/Game/Maps/Level1
+MRUItem0=/Game/Maps/Level1
+MRUItem1=/Game/Maps/MainMenu
+MRUItem2=/Game/Maps/Lev
 MRUItem3=/Game/Maps/ArenaMap
 MRUItem4=/Game/Maps/SqaureMap
 
@@ -2738,6 +2890,8 @@ TeleportAnimBlueprint_C=
 SwarmAnimBlueprint_C=
 AudioManager_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 ArrayProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+SceneCaptureComponent2D=SceneCaptureComponent2D.SceneCapture.General Show Flags,
+SceneCapture2D=SceneCapture2D.SceneCapture.General Show Flags,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2771,7 +2925,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent=
 MeshComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2785,11 +2939,11 @@ Pawn=
 REINST_HeroCharacter_C_364="\"Object.Actor.Tags\" "
 EnemyCharacter_C=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
-Widget=
-Visual=
-TwinStickMode_C="\"Object.AudioManagerReference\" \"Object.AudioManagerReference\" "
-GameModeBase="\"Object.AudioManagerReference\" \"Object.AudioManagerReference\" "
-Info="\"Object.AudioManagerReference\" \"Object.AudioManagerReference\" "
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
+TwinStickMode_C=
+GameModeBase=
+Info=
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModule=
@@ -2834,28 +2988,38 @@ TurretAnimBlueprint_C=
 TeleportAnimBlueprint_C=
 SwarmAnimBlueprint_C=
 AudioManager_C=
+Image="\"Object.Appearance.Brush\" "
+WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[1]\" "
+SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[1]\" "
+SceneCapture2D="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[6]\" "
+SceneCapture="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[6]\" "
+PaperGroupedSpriteActor="\"Object.Sprite.RenderComponent.Object.Instances.PerInstanceSpriteData\" \"Object.Sprite.RenderComponent.Object.Instances.PerInstanceSpriteData.PerInstanceSpriteData[0]\" "
+MinimapCam_Blueprint_C="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[6]\" "
+REINST_MinimapCam_Blueprint_C_922="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[6]\" "
+REINST_MinimapCam_Blueprint_C_926="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[6]\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Audio/AudioManager
+MRUItem0=/Game/Blueprints/Minimap/MinimapCam_Blueprint
 MRUItem1=/Game/Blueprints/HeroCharacter
-MRUItem2=/Game/Blueprints/Enemies/EnemyAi
-MRUItem3=/Game/Blueprints/Enemies/EnemyCharacter
-MRUItem4=/Game/Blueprints/Audio/assets/DoorOpen
-MRUItem5=/Game/Blueprints/Rooms/Door
-MRUItem6=/Game/Blueprints/Interactables/BP_BaseItem
-MRUItem7=/Game/Blueprints/Weapons/Projectile
-MRUItem8=/Game/Blueprints/Weapons/Projectile_Enemy
-MRUItem9=/Game/Blueprints/Weapons/BaseWeapon
-MRUItem10=/Game/Blueprints/Weapons/Weapon_Trident
-MRUItem11=/Game/Blueprints/Weapons/Weapon_Shotgun
-MRUItem12=/Game/Blueprints/Weapons/Projectile_Pellet
-MRUItem13=/Game/Blueprints/Weapons/Projectile_Homing
-MRUItem14=/Game/Maps/MainMenu
-MRUItem15=/Game/Blueprints/Weapons/Projectile_ChargeShot
-MRUItem16=/Game/Blueprints/TwinStickMode
-MRUItem17=/Game/MultistoryDungeons/Effects/Fog_01
-MRUItem18=/Game/MultistoryDungeons/TDCharacter/MDStats
-MRUItem19=/Game/MultistoryDungeons/TDCharacter/MDHUD
+MRUItem2=/Game/Blueprints/Weapons/Projectile
+MRUItem3=/Game/Blueprints/Minimap/Minimap_Widget
+MRUItem4=/Game/Blueprints/Minimap/Minimap_RenderTarget_Mat
+MRUItem5=/Game/Blueprints/Minimap/Minimap_RenderTarget
+MRUItem6=/Game/Blueprints/CameraController
+MRUItem7=/Game/Blueprints/Minimap/circle
+MRUItem8=/Game/Blueprints/Minimap/NewTextureRenderTarget2D
+MRUItem9=/Game/Blueprints/NewCanvasRenderTarget2D
+MRUItem10=/Game/Blueprints/Rooms/Room
+MRUItem11=/Game/Blueprints/TwinStickMode
+MRUItem12=/Game/Blueprints/TwinStickHUD
+MRUItem13=/Game/Maps/Level1
+MRUItem14=/Game/Blueprints/Minimap_Widget
+MRUItem15=/Game/Blueprints/Minimap_RenderTarget_Mat
+MRUItem16=/Game/Blueprints/Audio/AudioManager
+MRUItem17=/Game/Blueprints/Enemies/EnemyAi
+MRUItem18=/Game/Blueprints/Enemies/EnemyCharacter
+MRUItem19=/Game/Blueprints/Audio/assets/DoorOpen
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -2995,6 +3159,14 @@ MRUItem19=/Game/MultistoryDungeons/TDCharacter/MDHUD
 /Game/Blueprints/Weapons/Projectile_Pellet.Projectile_Pellet=1
 /Game/Blueprints/Audio/AudioManager.AudioManager=1
 /Game/Blueprints/Audio/assets/DoorOpen.DoorOpen=1
+/Game/Blueprints/Minimap_RenderTarget_Mat.Minimap_RenderTarget_Mat=1
+/Game/Blueprints/Minimap_Widget.Minimap_Widget=1
+/Game/Maps/Level1_BuiltData.Level1_BuiltData=1
+/Game/Blueprints/Minimap/circle.circle=1
+/Game/Blueprints/Minimap/Minimap_RenderTarget.Minimap_RenderTarget=1
+/Game/Blueprints/Minimap/Minimap_RenderTarget_Mat.Minimap_RenderTarget_Mat=1
+/Game/Blueprints/Minimap/Minimap_Widget.Minimap_Widget=1
+/Game/Blueprints/Minimap/MinimapCam_Blueprint.MinimapCam_Blueprint=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3009,6 +3181,10 @@ Contexts=(Name="PhysicsAssetEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 
 [PlacementMode]
+RecentlyPlaced=/Script/Paper2D.PaperGroupedSpriteActor;
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
+RecentlyPlaced=/Game/Blueprints/Minimap/Minimap_Target_Sprite.Minimap_Target_Sprite;
+RecentlyPlaced=/Script/Engine.SceneCapture2D;
 RecentlyPlaced=/Game/Blueprints/Enemies/EnemyCharacter.EnemyCharacter;
 RecentlyPlaced=/Game/Blueprints/Rooms/Level1/E.E;
 RecentlyPlaced=/Game/Blueprints/Rooms/Level1/W.W;
@@ -3025,10 +3201,6 @@ RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Damaged_Wall_Preset_01.Damaged_Wa
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Damaged_Wall_Right_01.Damaged_Wall_Right_01;
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Damaged_Wall_Preset_02.Damaged_Wall_Preset_02;
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_08.Wall_Corner_Preset_08;
-RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_04.Wall_Corner_Preset_04;
-RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_03.Wall_Corner_Preset_03;
-RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_02.Wall_Corner_Preset_02;
-RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_01.Wall_Corner_Preset_01;
 
 [MaterialEditor]
 PrimType=1
@@ -3107,6 +3279,10 @@ HeroCharacter_C.Tick=True
 Blueprint.ClassOptions=True
 FbxImportUI.Animation=True
 AnimSequence.ImportSettings=True
+SceneCaptureComponent2D.SceneCapture=True
+PaperSpriteComponent.Rendering=True
+SceneCapture2D.SceneCapture=True
+PaperGroupedSpriteActor.Rendering=True
 
 [WidgetTemplatesExpanded]
 Extra=False
