--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,7 +109,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 
 [EditorStartup]
-LastLevel=/Game/Maps/SqaureMap
+LastLevel=/Game/Maps/Level1
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -145,7 +145,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Audio
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/SpreadSheet_Interaction/Rooms
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -201,11 +201,11 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/Leehe/Documents/Unreal Projects/CAP4053/Content/Maps
+UNR=../../../../../Documents/Unreal Projects/CAP4053/Content/Maps
 BRUSH=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
 FBX=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
 FBXAnim=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
-GenericImport=../../../../../Desktop/audio/monster-10/monster-9.wav
+GenericImport=../../../../../Desktop/game_audio/257229__javierzumer__charging-power.wav
 GenericExport=C:/Users/Matthew Kurtz/Documents/Unreal Projects/CAP4053/Content
 GenericOpen=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
 GenericSave=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
@@ -1647,7 +1647,7 @@ SceneComponent.Cooking=True
 SceneComponent.Events=True
 EdGraph.Graph=True
 EdGraph.Inputs=True
-EdGraph.Outputs=True
+EdGraph.Outputs=False
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
@@ -2595,11 +2595,19 @@ SoundWave.Debug=True
 SoundWave.Concurrency=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
+Room_C.TransformCommon=True
+Obstacle_Rock_Destructable_C.Tick=True
+Obstacle_Rock_Destructable_C.Default=True
+Obstacle_Rock_Destructable_C.Rendering=True
+Obstacle_Rock_Destructable_C.Replication=True
+Obstacle_Rock_Destructable_C.Actor=True
+Obstacle_Rock_Destructable_C.Input=True
+FRoomInfo.None=True
 
 [MRU]
-MRUItem0=/Game/Maps/MainMenu
-MRUItem1=/Game/Maps/Lev
-MRUItem2=/Game/Maps/Level1
+MRUItem0=/Game/Maps/Level1
+MRUItem1=/Game/Maps/MainMenu
+MRUItem2=/Game/Maps/Lev
 MRUItem3=/Game/Maps/ArenaMap
 MRUItem4=/Game/Maps/SqaureMap
 
@@ -2704,7 +2712,7 @@ Projectile_C=K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 Room1_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
-Weapon_ChargeShot_C=K2Node_VariableGet.DefaultValueCategory.None,
+Weapon_ChargeShot_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 Weapon_Shotgun_C=K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 HeroCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
@@ -2834,28 +2842,29 @@ TurretAnimBlueprint_C=
 TeleportAnimBlueprint_C=
 SwarmAnimBlueprint_C=
 AudioManager_C=
+Room_C="\"Object.Default.RoomInfo\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Audio/AudioManager
-MRUItem1=/Game/Blueprints/HeroCharacter
-MRUItem2=/Game/Blueprints/Enemies/EnemyAi
-MRUItem3=/Game/Blueprints/Enemies/EnemyCharacter
-MRUItem4=/Game/Blueprints/Audio/assets/DoorOpen
-MRUItem5=/Game/Blueprints/Rooms/Door
-MRUItem6=/Game/Blueprints/Interactables/BP_BaseItem
-MRUItem7=/Game/Blueprints/Weapons/Projectile
-MRUItem8=/Game/Blueprints/Weapons/Projectile_Enemy
-MRUItem9=/Game/Blueprints/Weapons/BaseWeapon
-MRUItem10=/Game/Blueprints/Weapons/Weapon_Trident
-MRUItem11=/Game/Blueprints/Weapons/Weapon_Shotgun
-MRUItem12=/Game/Blueprints/Weapons/Projectile_Pellet
-MRUItem13=/Game/Blueprints/Weapons/Projectile_Homing
-MRUItem14=/Game/Maps/MainMenu
-MRUItem15=/Game/Blueprints/Weapons/Projectile_ChargeShot
-MRUItem16=/Game/Blueprints/TwinStickMode
-MRUItem17=/Game/MultistoryDungeons/Effects/Fog_01
-MRUItem18=/Game/MultistoryDungeons/TDCharacter/MDStats
-MRUItem19=/Game/MultistoryDungeons/TDCharacter/MDHUD
+MRUItem0=/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomDoorType
+MRUItem1=/Game/Blueprints/SpreadSheet_Interaction/Rooms/EGridTileType
+MRUItem2=/Game/Blueprints/SpreadSheet_Interaction/Rooms/DT_Rooms
+MRUItem3=/Game/Blueprints/Audio/assets/DoorOpen
+MRUItem4=/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomLayouts
+MRUItem5=/Game/Blueprints/Rooms/Obstacle_Rock_Destructable
+MRUItem6=/Game/Maps/Level1
+MRUItem7=/Game/Blueprints/Audio/assets/atmosphere/boss_atmosphere
+MRUItem8=/Game/Blueprints/Audio/assets/atmosphere/boss_atmosphere_Cue
+MRUItem9=/Game/Blueprints/Audio/AudioManager
+MRUItem10=/Game/Blueprints/Rooms/Room
+MRUItem11=/Game/Blueprints/HeroCharacter
+MRUItem12=/Game/Blueprints/Enemies/BossSloth/SlothArm
+MRUItem13=/Game/Blueprints/Weapons/Weapon_ChargeSHot
+MRUItem14=/Game/Blueprints/Enemies/EnemyAi
+MRUItem15=/Game/Blueprints/Enemies/EnemyCharacter
+MRUItem16=/Game/Blueprints/Rooms/Door
+MRUItem17=/Game/Blueprints/Interactables/BP_BaseItem
+MRUItem18=/Game/Blueprints/Weapons/Projectile
+MRUItem19=/Game/Blueprints/Weapons/Projectile_Enemy
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -2943,7 +2952,7 @@ MRUItem19=/Game/MultistoryDungeons/TDCharacter/MDHUD
 /Game/Blueprints/Rooms/Door.Door=1
 /Game/Meshes/StaticMesh4.StaticMesh4=1
 /Game/Meshes/StaticMesh.StaticMesh=1
-/Game/Blueprints/SpreadSheet_Interaction/Rooms/EGridTileType.EGridTileType=1
+/Game/Blueprints/SpreadSheet_Interaction/Rooms/EGridTileType.EGridTileType=0
 /Game/Blueprints/Rooms/Room.Room=1
 /Game/Blueprints/SpreadSheet_Interaction/Rooms/DT_RoomLayouts.DT_RoomLayouts=1
 /Game/Blueprints/SpreadSheet_Interaction/Items/DT_Items.DT_Items=1
@@ -2994,7 +3003,13 @@ MRUItem19=/Game/MultistoryDungeons/TDCharacter/MDHUD
 /Game/Blueprints/Weapons/Projectile_Homing.Projectile_Homing=1
 /Game/Blueprints/Weapons/Projectile_Pellet.Projectile_Pellet=1
 /Game/Blueprints/Audio/AudioManager.AudioManager=1
-/Game/Blueprints/Audio/assets/DoorOpen.DoorOpen=1
+/Game/Blueprints/Audio/assets/DoorOpen.DoorOpen=0
+/Game/Blueprints/Audio/assets/atmosphere/boss_atmosphere_Cue.boss_atmosphere_Cue=1
+/Game/Blueprints/Audio/assets/atmosphere/boss_atmosphere.boss_atmosphere=1
+/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomLayouts.ERoomLayouts=0
+/Game/Blueprints/Rooms/Obstacle_Rock_Destructable.Obstacle_Rock_Destructable=0
+/Game/Blueprints/SpreadSheet_Interaction/Rooms/DT_Rooms.DT_Rooms=0
+/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomDoorType.ERoomDoorType=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3188,7 +3203,7 @@ AutoReimportThreshold=3.000000
 bAutoCreateAssets=True
 bAutoDeleteAssets=True
 bDetectChangesOnStartup=True
-bPromptBeforeAutoImporting=True
+bPromptBeforeAutoImporting=False
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
