--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/SpreadSheet_Interaction/Rooms
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Audio/assets/atmosphere
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2603,6 +2603,42 @@ Obstacle_Rock_Destructable_C.Replication=True
 Obstacle_Rock_Destructable_C.Actor=True
 Obstacle_Rock_Destructable_C.Input=True
 FRoomInfo.None=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Clipping=True
+EditableTextBox.Navigation=True
+EditableTextBox.Events=True
+ItemUI_C.Appearance=True
+ItemUI_C.Input=True
+ItemUI_C.Interaction=True
+ItemUI_C.Performance=True
+ItemUI_C.Layout=True
+ItemUI_C.Behavior=True
+ItemUI_C.Render Transform=True
+ItemUI_C.Navigation=True
+ItemUI_C.Designer=True
+ItemUI_C.Clipping=True
+TextProperty.Variable=True
+TextProperty.DefaultValueCategory=True
+BP_BaseInteractable_C.Tick=True
+BP_BaseInteractable_C.Rendering=True
+BP_BaseInteractable_C.Replication=True
+BP_BaseInteractable_C.Actor=True
+BP_BaseInteractable_C.Input=True
+REINST_EnemyCharacter_C_612.Character=True
+REINST_EnemyCharacter_C_612.Tick=True
+REINST_EnemyCharacter_C_612.Camera=True
+REINST_EnemyCharacter_C_612.Pawn=True
+REINST_EnemyCharacter_C_612.Rendering=True
+REINST_EnemyCharacter_C_612.Replication=True
+REINST_EnemyCharacter_C_612.Actor=True
+REINST_EnemyCharacter_C_612.Input=True
+REINST_EnemyCharacter_C_612.None=True
+REINST_EnemyCharacter_C_612.BaseCharacter=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level1
@@ -2707,8 +2743,8 @@ EnemyCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.Def
 BaseCharacter=K2Node_VariableGet.DefaultValueCategory.None,
 TwinStickMode_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,ParticleModuleColorOverLife.Color.OutVal,
-Explosion_C=K2Node_VariableGet.DefaultValueCategory.None,
-Projectile_C=K2Node_VariableGet.DefaultValueCategory.None,
+Explosion_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+Projectile_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 Room1_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
@@ -2732,7 +2768,7 @@ Projectile_Enemy_C=K2Node_VariableGet.DefaultValueCategory.None,
 PauseMenu_C=K2Node_VariableGet.DefaultValueCategory.None,
 ClassProperty=K2Node_VariableGet.DefaultValueCategory.None,
 StrProperty=K2Node_VariableGet.DefaultValueCategory.None,
-BP_BaseItem_C=K2Node_VariableGet.DefaultValueCategory.None,
+BP_BaseItem_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 BP_BaseItem_Child_C=K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
@@ -2746,6 +2782,8 @@ TeleportAnimBlueprint_C=
 SwarmAnimBlueprint_C=
 AudioManager_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 ArrayProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+ItemUI_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+BaseWeapon_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2778,7 +2816,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent=
-MeshComponent=
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent=
 ActorComponent=
@@ -2795,9 +2833,9 @@ EnemyCharacter_C=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 Widget=
 Visual=
-TwinStickMode_C="\"Object.AudioManagerReference\" \"Object.AudioManagerReference\" "
-GameModeBase="\"Object.AudioManagerReference\" \"Object.AudioManagerReference\" "
-Info="\"Object.AudioManagerReference\" \"Object.AudioManagerReference\" "
+TwinStickMode_C=
+GameModeBase=
+Info=
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModule=
@@ -2815,7 +2853,7 @@ ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.
 ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
-Explosion_C=
+Explosion_C="\"Object.Damage\" \"Object.Damage\" "
 Projectile_C=
 Projectile_Homing2_C=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2827,8 +2865,8 @@ EnemySpawner_C=
 SlothArm_C=
 Projectile_Enemy_C=
 BP_BaseItem_Child_C="\"Object.Actor.Tags\" "
-BP_BaseItem_C="\"Object.Actor.Tags\" "
-BP_BaseInteractable_C="\"Object.Actor.Tags\" "
+BP_BaseItem_C=
+BP_BaseInteractable_C=
 BP_BaseGunPickup_C="\"Object.Actor.Tags\" "
 BP_ShotgunPickup_C="\"Object.Actor.Tags\" "
 BP_HomingMissilePickup_C="\"Object.Actor.Tags\" "
@@ -2843,28 +2881,33 @@ TeleportAnimBlueprint_C=
 SwarmAnimBlueprint_C=
 AudioManager_C=
 Room_C="\"Object.Default.RoomInfo\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+ItemUI_C=
+UserWidget=
+BaseWeapon_C=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomDoorType
-MRUItem1=/Game/Blueprints/SpreadSheet_Interaction/Rooms/EGridTileType
-MRUItem2=/Game/Blueprints/SpreadSheet_Interaction/Rooms/DT_Rooms
-MRUItem3=/Game/Blueprints/Audio/assets/DoorOpen
-MRUItem4=/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomLayouts
-MRUItem5=/Game/Blueprints/Rooms/Obstacle_Rock_Destructable
-MRUItem6=/Game/Maps/Level1
-MRUItem7=/Game/Blueprints/Audio/assets/atmosphere/boss_atmosphere
-MRUItem8=/Game/Blueprints/Audio/assets/atmosphere/boss_atmosphere_Cue
-MRUItem9=/Game/Blueprints/Audio/AudioManager
-MRUItem10=/Game/Blueprints/Rooms/Room
-MRUItem11=/Game/Blueprints/HeroCharacter
-MRUItem12=/Game/Blueprints/Enemies/BossSloth/SlothArm
-MRUItem13=/Game/Blueprints/Weapons/Weapon_ChargeSHot
-MRUItem14=/Game/Blueprints/Enemies/EnemyAi
-MRUItem15=/Game/Blueprints/Enemies/EnemyCharacter
-MRUItem16=/Game/Blueprints/Rooms/Door
-MRUItem17=/Game/Blueprints/Interactables/BP_BaseItem
-MRUItem18=/Game/Blueprints/Weapons/Projectile
-MRUItem19=/Game/Blueprints/Weapons/Projectile_Enemy
+MRUItem0=/Game/Blueprints/Audio/assets/atmosphere/title_atmosphere
+MRUItem1=/Game/Blueprints/Audio/assets/atmosphere/Atmosphere_Cue
+MRUItem2=/Game/Blueprints/Audio/assets/atmosphere/atmosphere
+MRUItem3=/Game/Blueprints/Audio/AudioManager
+MRUItem4=/Game/Blueprints/Enemies/EnemyCharacter
+MRUItem5=/Game/Blueprints/Rooms/Room
+MRUItem6=/Game/Blueprints/Interactables/BP_BaseItem
+MRUItem7=/Game/Blueprints/Interactables/BP_BaseInteractable
+MRUItem8=/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomLayouts
+MRUItem9=/Game/Blueprints/SpreadSheet_Interaction/Items/EItems_Specific
+MRUItem10=/Game/Blueprints/SpreadSheet_Interaction/Items/EItemType
+MRUItem11=/Game/Blueprints/Weapons/Weapon_ChargeSHot
+MRUItem12=/Game/Blueprints/Weapons/BaseWeapon
+MRUItem13=/Game/Blueprints/Audio/assets/DoorOpen
+MRUItem14=/Game/Blueprints/Weapons/Projectile_Enemy
+MRUItem15=/Game/Blueprints/Weapons/Projectile
+MRUItem16=/Game/Blueprints/HeroCharacter
+MRUItem17=/Game/Blueprints/Enemies/Explosion
+MRUItem18=/Game/Blueprints/ItemUI/ItemUI
+MRUItem19=/Game/Maps/Level1
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -3010,6 +3053,14 @@ MRUItem19=/Game/Blueprints/Weapons/Projectile_Enemy
 /Game/Blueprints/Rooms/Obstacle_Rock_Destructable.Obstacle_Rock_Destructable=0
 /Game/Blueprints/SpreadSheet_Interaction/Rooms/DT_Rooms.DT_Rooms=0
 /Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomDoorType.ERoomDoorType=0
+/Game/Blueprints/ItemUI/ItemUI.ItemUI=1
+/Game/Blueprints/Enemies/Explosion.Explosion=1
+/Game/Blueprints/SpreadSheet_Interaction/Items/EItemType.EItemType=1
+/Game/Blueprints/SpreadSheet_Interaction/Items/EItems_Specific.EItems_Specific=1
+/Game/Blueprints/Interactables/BP_BaseInteractable.BP_BaseInteractable=1
+/Game/Blueprints/Audio/assets/atmosphere/atmosphere.atmosphere=1
+/Game/Blueprints/Audio/assets/atmosphere/Atmosphere_Cue.Atmosphere_Cue=1
+/Game/Blueprints/Audio/assets/atmosphere/title_atmosphere.title_atmosphere=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3122,6 +3173,8 @@ HeroCharacter_C.Tick=True
 Blueprint.ClassOptions=True
 FbxImportUI.Animation=True
 AnimSequence.ImportSettings=True
+TextProperty.Variable=True
+FloatProperty.Variable=True
 
 [WidgetTemplatesExpanded]
 Extra=False
