--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,9 +113,11 @@ LastLevel=/Game/Maps/Level1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/TwinStickMode.TwinStickMode
+OpenAssetsAtExit=/Game/Blueprints/HeroCharacter.HeroCharacter
 
 [RootWindow]
-ScreenPosition=X=1076.000 Y=150.000
+ScreenPosition=X=-105.000 Y=-26.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -145,7 +147,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Audio/assets/atmosphere
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/minimap
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2639,6 +2641,86 @@ REINST_EnemyCharacter_C_612.Actor=True
 REINST_EnemyCharacter_C_612.Input=True
 REINST_EnemyCharacter_C_612.None=True
 REINST_EnemyCharacter_C_612.BaseCharacter=True
+SceneCapture2D.TransformCommon=True
+SceneCapture2D.Lens=True
+SceneCapture2D.Color Grading=True
+SceneCapture2D.Film=True
+SceneCapture2D.Mobile Tonemapper=True
+SceneCapture2D.Rendering Features=True
+SceneCapture2D.Projection=True
+SceneCapture2D.SceneCapture=True
+SceneCapture2D.PostProcessVolume=True
+SceneCapture2D.Rendering=True
+SceneCapture2D.Tags=True
+SceneCapture2D.Activation=True
+SceneCapture2D.Cooking=True
+SceneCapture2D.Replication=True
+SceneCapture2D.Input=True
+minimapCam_Blueprint_C.TransformCommon=True
+minimapCam_Blueprint_C.Lens=True
+minimapCam_Blueprint_C.Color Grading=True
+minimapCam_Blueprint_C.Film=True
+minimapCam_Blueprint_C.Mobile Tonemapper=True
+minimapCam_Blueprint_C.Rendering Features=True
+minimapCam_Blueprint_C.Projection=True
+minimapCam_Blueprint_C.SceneCapture=True
+minimapCam_Blueprint_C.PostProcessVolume=True
+minimapCam_Blueprint_C.Rendering=True
+minimapCam_Blueprint_C.Tags=True
+minimapCam_Blueprint_C.Activation=True
+minimapCam_Blueprint_C.Cooking=True
+minimapCam_Blueprint_C.Replication=True
+minimapCam_Blueprint_C.Input=True
+minimapCam_Blueprint_C.Tick=True
+minimapCam_Blueprint_C.ComponentTick=True
+minimapCam_Blueprint_C.ComponentReplication=True
+minimapCam_Blueprint_C.Variable=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Events=True
+PaperGroupedSpriteComponent.Variable=True
+PaperGroupedSpriteComponent.TransformCommon=True
+PaperGroupedSpriteComponent.Warning=True
+PaperGroupedSpriteComponent.Sockets=True
+PaperGroupedSpriteComponent.Sprite=True
+PaperGroupedSpriteComponent.Materials=True
+PaperGroupedSpriteComponent.Instances=True
+PaperGroupedSpriteComponent.Physics=True
+PaperGroupedSpriteComponent.Collision=True
+PaperGroupedSpriteComponent.Lighting=True
+PaperGroupedSpriteComponent.Rendering=True
+PaperGroupedSpriteComponent.Tags=True
+PaperGroupedSpriteComponent.ComponentReplication=True
+PaperGroupedSpriteComponent.Activation=True
+PaperGroupedSpriteComponent.Cooking=True
+PaperGroupedSpriteComponent.Events=True
+PaperSpriteComponent.Variable=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Sockets=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.ComponentReplication=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperSpriteComponent.Events=True
+CanvasRenderTarget2D.TextureRenderTarget2D=True
+CanvasRenderTarget2D.TextureRenderTarget=True
+CanvasRenderTarget2D.File Path=True
+CanvasRenderTarget2D.LevelOfDetail=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level1
@@ -2784,6 +2866,7 @@ AudioManager_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.Defau
 ArrayProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 ItemUI_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 BaseWeapon_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+minimapCam_Blueprint_C=minimapCam_Blueprint_C.SceneCapture.General Show Flags,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2816,8 +2899,8 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent=
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent=
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2831,8 +2914,8 @@ Pawn=
 REINST_HeroCharacter_C_364="\"Object.Actor.Tags\" "
 EnemyCharacter_C=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
 TwinStickMode_C=
 GameModeBase=
 Info=
@@ -2886,28 +2969,36 @@ TextLayoutWidget="\"Object.Appearance.Font\" "
 ItemUI_C=
 UserWidget=
 BaseWeapon_C=
+Image="\"Object.Appearance.Brush\" "
+minimapCam_Blueprint_C=
+SceneCapture2D=
+SceneCapture=
+CanvasRenderTarget2D="\"Object.TextureRenderTarget2D.ClearColor\" "
+TextureRenderTarget2D="\"Object.TextureRenderTarget2D.ClearColor\" "
+TextureRenderTarget="\"Object.TextureRenderTarget2D.ClearColor\" "
+Texture="\"Object.TextureRenderTarget2D.ClearColor\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Audio/assets/atmosphere/title_atmosphere
-MRUItem1=/Game/Blueprints/Audio/assets/atmosphere/Atmosphere_Cue
-MRUItem2=/Game/Blueprints/Audio/assets/atmosphere/atmosphere
-MRUItem3=/Game/Blueprints/Audio/AudioManager
-MRUItem4=/Game/Blueprints/Enemies/EnemyCharacter
-MRUItem5=/Game/Blueprints/Rooms/Room
-MRUItem6=/Game/Blueprints/Interactables/BP_BaseItem
-MRUItem7=/Game/Blueprints/Interactables/BP_BaseInteractable
-MRUItem8=/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomLayouts
-MRUItem9=/Game/Blueprints/SpreadSheet_Interaction/Items/EItems_Specific
-MRUItem10=/Game/Blueprints/SpreadSheet_Interaction/Items/EItemType
-MRUItem11=/Game/Blueprints/Weapons/Weapon_ChargeSHot
-MRUItem12=/Game/Blueprints/Weapons/BaseWeapon
-MRUItem13=/Game/Blueprints/Audio/assets/DoorOpen
-MRUItem14=/Game/Blueprints/Weapons/Projectile_Enemy
-MRUItem15=/Game/Blueprints/Weapons/Projectile
-MRUItem16=/Game/Blueprints/HeroCharacter
-MRUItem17=/Game/Blueprints/Enemies/Explosion
-MRUItem18=/Game/Blueprints/ItemUI/ItemUI
-MRUItem19=/Game/Maps/Level1
+MRUItem0=/Game/Blueprints/minimap/minimap_widget
+MRUItem1=/Game/Blueprints/minimap/minimapCam_Blueprint
+MRUItem2=/Game/Blueprints/minimap/minimap_RenderTarget_map_Sprite
+MRUItem3=/Game/Blueprints/HeroCharacter
+MRUItem4=/Game/Blueprints/minimap/minimap_RenderTarget
+MRUItem5=/Game/Blueprints/minimap/minimap_RenderTarget_Mat
+MRUItem6=/Game/Blueprints/TwinStickMode
+MRUItem7=/Game/Maps/Level1
+MRUItem8=/Game/Blueprints/Audio/assets/atmosphere/title_atmosphere
+MRUItem9=/Game/Blueprints/Audio/assets/atmosphere/Atmosphere_Cue
+MRUItem10=/Game/Blueprints/Audio/assets/atmosphere/atmosphere
+MRUItem11=/Game/Blueprints/Audio/AudioManager
+MRUItem12=/Game/Blueprints/Enemies/EnemyCharacter
+MRUItem13=/Game/Blueprints/Rooms/Room
+MRUItem14=/Game/Blueprints/Interactables/BP_BaseItem
+MRUItem15=/Game/Blueprints/Interactables/BP_BaseInteractable
+MRUItem16=/Game/Blueprints/SpreadSheet_Interaction/Rooms/ERoomLayouts
+MRUItem17=/Game/Blueprints/SpreadSheet_Interaction/Items/EItems_Specific
+MRUItem18=/Game/Blueprints/SpreadSheet_Interaction/Items/EItemType
+MRUItem19=/Game/Blueprints/Weapons/Weapon_ChargeSHot
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -3061,6 +3152,11 @@ MRUItem19=/Game/Maps/Level1
 /Game/Blueprints/Audio/assets/atmosphere/atmosphere.atmosphere=1
 /Game/Blueprints/Audio/assets/atmosphere/Atmosphere_Cue.Atmosphere_Cue=1
 /Game/Blueprints/Audio/assets/atmosphere/title_atmosphere.title_atmosphere=1
+/Game/Blueprints/minimap/minimapCam_Blueprint.minimapCam_Blueprint=1
+/Game/Blueprints/minimap/minimap_widget.minimap_widget=1
+/Game/Blueprints/minimap/minimap_RenderTarget_Mat.minimap_RenderTarget_Mat=1
+/Game/Blueprints/minimap/minimap_RenderTarget.minimap_RenderTarget=1
+/Game/Blueprints/minimap/minimap_RenderTarget_map_Sprite.minimap_RenderTarget_map_Sprite=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3075,6 +3171,7 @@ Contexts=(Name="PhysicsAssetEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SceneCapture2D;
 RecentlyPlaced=/Game/Blueprints/Enemies/EnemyCharacter.EnemyCharacter;
 RecentlyPlaced=/Game/Blueprints/Rooms/Level1/E.E;
 RecentlyPlaced=/Game/Blueprints/Rooms/Level1/W.W;
@@ -3094,7 +3191,6 @@ RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_08.Wall_Corner
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_04.Wall_Corner_Preset_04;
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_03.Wall_Corner_Preset_03;
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_02.Wall_Corner_Preset_02;
-RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_01.Wall_Corner_Preset_01;
 
 [MaterialEditor]
 PrimType=1
@@ -3175,6 +3271,10 @@ FbxImportUI.Animation=True
 AnimSequence.ImportSettings=True
 TextProperty.Variable=True
 FloatProperty.Variable=True
+minimapCam_Blueprint_C.Rendering=True
+minimapCam_Blueprint_C.SceneCapture=True
+PreviewMaterial.Material=True
+CanvasRenderTarget2D.LevelOfDetail=True
 
 [WidgetTemplatesExpanded]
 Extra=False
